feat: asegurar ampliaciones administrativas
